# bt-macd-binance

./: .cruft.json  .isort.cfg  README.md  backtest.py  fetch_data.py  pyproject.toml  setup.cfg
.github/workflows/: pre-commit.yml  test.yml
btmacd/: __init__.py  binance_feed.py  binance_fetcher.py  macd_strategy.py  sizers.py  tradeanalyzer.py  tradeswriter.py
docs/: conf.py
docs/_templates/: badges.html  github.html  moreinfo.html
tests/: prepare_ohlc_fixture.py  test_binance_fetcher.py
tests/fixtures/: ohlc_binance.json
